# quick-start-tauri-proto

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  db.rs  greet.rs  main.rs
src/lib/: CaptureTask.svelte  Greet.svelte  UserSettings.svelte
src/routes/: +layout.svelte  +page.svelte  Header.svelte
src/routes/timer/: +page.svelte
